[package]
name = "twin-stick-quad"
version = "0.1.0"
authors = ["gerodrus"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3.10"
legion = { version = "0.4.0", default-features = false, features = ["codegen"] }
egui-macroquad = "0.6.0"
egui = "0.14.2"

[profile.dev.package.'*']
opt-level = 3

[features]
wasm-bindgen = ["legion/wasm-bindgen"]
